--- a/src/main/resources/templates/accident/addAccident.html
+++ b/src/main/resources/templates/accident/addAccident.html
@@ -28,10 +28,18 @@
                     </tr>
                     <tr>
                         <td>Тип :</td>
-                        <td> <select class="form-control" id="type.id"  name="type.id">
+                        <td> <select class="form-control" id="type.id"  name="type.id" required>
                             <option th:each="type: ${types}"
                                     th:text="${type.name}"
                                     th:value="${type.id}"></option>
+                        </select></td>
+                    </tr>
+                    <tr>
+                        <td>Статьи :</td>
+                        <td> <select class="form-control" id="rIds" name="rIds" multiple required>
+                            <option th:each="rule: ${rules}"
+                                    th:text="${rule.name}"
+                                    th:value="${rule.id}"></option>
                         </select></td>
                     </tr>
                     <tr>
