--- a/src/main/resources/templates/fragment/navbefore.html
+++ b/src/main/resources/templates/fragment/navbefore.html
@@ -12,7 +12,7 @@
                     <a class="nav-item nav-link" th:href="@{/accidents}">Инциденты</a>
                 </li>
                 <li>
-                    <a class="nav-item nav-link" th:href="@{/addAccident}">Добавить Инцидент</a>
+                    <a class="nav-item nav-link" th:href="@{/addAccident}">Добавить инцидент</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
