--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,22 +16,28 @@
         <div class="card-header">
             <div class="row ml-4 fw-bold">
                 <div class="col-1 text-justify font-weight-bold">id</div>
-                <div class="col-3 text-justify font-weight-bold">Наименование</div>
-                <div class="col-4 text-justify font-weight-bold">Описание</div>
+                <div class="col-2 text-justify font-weight-bold">Наименование</div>
+                <div class="col-3 text-justify font-weight-bold">Описание</div>
                 <div class="col-2 text-justify font-weight-bold">Адрес</div>
                 <div class="col-2 text-justify font-weight-bold">Тип</div>
+                <div class="col-2 text-justify font-weight-bold">Статья</div>
             </div>
         </div>
         <div class="card-body">
             <div class="row mb-3 pb-3 ml-4 border-bottom" th:each="accident: ${accidents}">
                 <div class="col-1 text-justify" th:text="${accident.id}"></div>
-                <div class="col-3 text-justify">
+                <div class="col-2 text-justify">
                     <a style="color:black" th:href="@{/editAccident(accidentId=${accident.id})}"
                                                    th:text="${accident.name}"></a>
                 </div>
-                <div class="col-4 text-justify" th:text="${accident.text}"></div>
+                <div class="col-3 text-justify" th:text="${accident.text}"></div>
                 <div class="col-2 text-justify" th:text="${accident.address}"></div>
                 <div class="col-2 text-start" th:text="${accident.type.name}"></div>
+                <div class="col-2 text-start">
+                    <ul class="mb-1" th:each="rule: ${accident.rules}">
+                        <li class="text-left " th:text="${rule.name}"></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
