--- a/src/main/resources/templates/accident/addAccident.html
+++ b/src/main/resources/templates/accident/addAccident.html
@@ -23,7 +23,7 @@
                     <tr>
                         <td>Описание :</td>
                         <td><textarea class="form-control" rows="8" maxlength="400"
-                                      name="text" id="text"
+                                      name="description" id="description"
                                       placeholder="Не больше 400 символов" required></textarea></td>
                     </tr>
                     <tr>
@@ -35,7 +35,7 @@
                         </select></td>
                     </tr>
                     <tr>
-                        <td>Статьи :</td>
+                        <td>Правила :</td>
                         <td> <select class="form-control" id="rIds" name="rIds" multiple required>
                             <option th:each="rule: ${rules}"
                                     th:text="${rule.name}"
