--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
                 <div class="col-3 text-justify font-weight-bold">Описание</div>
                 <div class="col-2 text-justify font-weight-bold">Адрес</div>
                 <div class="col-2 text-justify font-weight-bold">Тип</div>
-                <div class="col-2 text-justify font-weight-bold">Статья</div>
+                <div class="col-2 text-justify font-weight-bold">Правило</div>
             </div>
         </div>
         <div class="card-body">
@@ -30,7 +30,7 @@
                     <a style="color:black" th:href="@{/editAccident(accidentId=${accident.id})}"
                                                    th:text="${accident.name}"></a>
                 </div>
-                <div class="col-3 text-justify" th:text="${accident.text}"></div>
+                <div class="col-3 text-justify" th:text="${accident.description}"></div>
                 <div class="col-2 text-justify" th:text="${accident.address}"></div>
                 <div class="col-2 text-start" th:text="${accident.type.name}"></div>
                 <div class="col-2 text-start">
