--- a/src/main/resources/templates/fragment/navlogin.html
+++ b/src/main/resources/templates/fragment/navlogin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <div class="container mt-3" th:fragment="navlogin">
     <nav class="navbar navbar-expand-lg navbar-light bg-light pl-3">
         <a class="navbar-brand">Автонарушения</a>
@@ -9,29 +9,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-item nav-link" th:href="@{/shows}">Список фильмов</a>
+                    <a class="nav-item nav-link" th:href="@{/index}">Список инцидентов</a>
                 </li>
-                <li th:if="${user.email} == 'admin@cinema.ru'" class="nav-item">
-                    <a class="nav-item nav-link" th:href="@{/adminShows}">Управление списком</a>
-                </li>
-                <li th:if="${user.email} == 'admin@cinema.ru'" class="nav-item">
-                    <a class="nav-item nav-link" th:href="@{/addShow}">Добавить фильм</a>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" th:href="@{/addAccident}">Добавить инцидент</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-item nav-link" th:href="@{/userEdit}">Редактировать профиль</a>
                 </li>
-                <li th:if="${user.email} == null" class="nav-item">
+                <li th:if="${user.username} == null" class="nav-item">
                     <a class="nav-link" th:href="@{/login}">Войти</a>
                 </li>
-                <li th:if="${user.email} == null" class="nav-item">
+                <li th:if="${user.username} == null" class="nav-item">
                     <a class="nav-link" th:href="@{/registration}">Регистрация</a>
                 </li>
-                <li th:if="${user.email} != null" class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link" th:text="'Вы вошли как : ' + ${user.username}"></a>
                 </li>
-                <li th:if="${user.email} != null" class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{/logout}">Выйти</a>
                 </li>
             </ul>
