--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:insert="fragment/head :: head"></head>
 <body>
-<div th:insert="fragment/navbefore :: navbefore"></div>
+<div th:insert="fragment/navlogin :: navlogin"></div>
 <div class="container">
 </div>
 <div class="container mt-3 pl-5">
     <div class="mx-3 pl-3">
-        <h5>Добро пожаловать, Гость!</h5>
+        <h5><span th:text="'Добро пожаловать, ' + ${user.username} + '!'"></span></h5>
         Это сервис по регистрации автонарушений.
     </div>
 </div>
@@ -28,7 +28,7 @@
                 <div class="col-1 text-justify" th:text="${accident.id}"></div>
                 <div class="col-2 text-justify">
                     <a style="color:black" th:href="@{/editAccident(accidentId=${accident.id})}"
-                                                   th:text="${accident.name}"></a>
+                       th:text="${accident.name}"></a>
                 </div>
                 <div class="col-3 text-justify" th:text="${accident.description}"></div>
                 <div class="col-2 text-justify" th:text="${accident.address}"></div>
