Добавил страницу подробного описания инцидента - accidentDetails.html, добавил статусы инцидента Status, добавил дату и время инцидента. Рефакторинг и исправления.

--- a/src/main/resources/templates/accident/addAccident.html
+++ b/src/main/resources/templates/accident/addAccident.html
@@ -43,6 +43,10 @@
                         </select></td>
                     </tr>
                     <tr>
+                        <td>Дата и время :</td>
+                        <td><input type="datetime-local" class="form-control" name="dateTime" id="dateTime" required/></td>
+                    </tr>
+                    <tr>
                         <td><input type="submit" class="btn btn-secondary" value="Сохранить"/>
                     </tr>
                 </table>
