--- a/src/main/resources/templates/accident/addAccident.html
+++ b/src/main/resources/templates/accident/addAccident.html
@@ -9,25 +9,24 @@
             Добавить инцидент
         </div>
         <div class="card-body">
-            <form th:action="@{/saveAccident}" method="POST" enctype="multipart/form-data">
+            <form th:action="@{/saveAccident}" th:object="${accident}" method="POST" enctype="multipart/form-data">
                 <table class="table">
-                    <input type="hidden" name="id" value="0"/>
                     <tr>
-                        <td>Наименование :</td>
-                        <td><input type="text" class="form-control" name="name" id="name" required/></td>
+                        <td><label for="name">Наименование :</label></td>
+                        <td><input type="text" class="form-control" th:field="*{name}" name="name" id="name" required/></td>
                     </tr>
                     <tr>
-                        <td>Адрес :</td>
-                        <td><input type="text" class="form-control" name="address" id="address" required/></td>
+                        <td><label for="address">Адрес :</label></td>
+                        <td><input type="text" class="form-control" th:field="*{address}" name="address" id="address" required/></td>
                     </tr>
                     <tr>
-                        <td>Описание :</td>
-                        <td><textarea class="form-control" rows="8" maxlength="400"
+                        <td><label for="description">Описание :</label></td>
+                        <td><textarea class="form-control" th:field="*{description}" rows="8" maxlength="400"
                                       name="description" id="description"
                                       placeholder="Не больше 400 символов" required></textarea></td>
                     </tr>
                     <tr>
-                        <td>Тип :</td>
+                        <td><label for="type.id">Тип :</label></td>
                         <td> <select class="form-control" id="type.id"  name="type.id" required>
                             <option th:each="type: ${types}"
                                     th:text="${type.name}"
@@ -35,7 +34,7 @@
                         </select></td>
                     </tr>
                     <tr>
-                        <td>Правила :</td>
+                        <td><label for="rIds">Правила :</label></td>
                         <td> <select class="form-control" id="rIds" name="rIds" multiple required>
                             <option th:each="rule: ${rules}"
                                     th:text="${rule.name}"
@@ -43,8 +42,12 @@
                         </select></td>
                     </tr>
                     <tr>
-                        <td>Дата и время :</td>
-                        <td><input type="datetime-local" class="form-control" name="dateTime" id="dateTime" required/></td>
+                        <td><label for="dateTime">Дата и время :</label></td>
+                        <td><input type="datetime-local" class="form-control" th:field="*{accidentDateTime}" name="dateTime" id="dateTime" required/></td>
+                    </tr>
+                    <tr>
+                        <td><label for="formFile">Фото</label></td>
+                        <td><input class="form-control form-control-sm w-100" type="file" id="formFile" name="file" required></td>
                     </tr>
                     <tr>
                         <td><input type="submit" class="btn btn-secondary" value="Сохранить"/>
