--- a/src/main/resources/templates/accident/editAccident.html
+++ b/src/main/resources/templates/accident/editAccident.html
@@ -9,25 +9,27 @@
             Отредактировать инцидент
         </div>
         <div class="card-body">
-            <form th:action="@{/saveAccident}" th:object="${accident}" method="POST">
+            <form th:action="@{/saveAccident}" th:object="${accident}" method="POST" enctype="multipart/form-data">
+                <input type="hidden" name="id" th:field="*{id}"/>
+                <input type="hidden" name="fileId" th:field="*{fileId}">
+                <input type="hidden" name="status" th:field="*{status}">
                 <table class="table">
-                    <input type="hidden" name="id" th:field="*{id}"/>
                     <tr>
-                        <td>Наименование :</td>
-                        <td><input class="form-control" type="text" th:field="*{name}" name="name" required/></td>
+                        <td><label for="name">Наименование :</label></td>
+                        <td><input class="form-control" type="text" th:field="*{name}" name="name" id="name" required/></td>
                     </tr>
                     <tr>
-                        <td>Адрес :</td>
-                        <td><input class="form-control" type="text" th:field="*{address}" name="address" required/></td>
+                        <td><label for="address">Адрес :</label></td>
+                        <td><input class="form-control" type="text" th:field="*{address}" name="address" id="address" required/></td>
                     </tr>
                     <tr>
-                        <td>Описание :</td>
-                        <td><textarea class="form-control" th:field="*{description}" rows="8" maxlength="400"
+                        <td><label for="description">Описание :</label></td>
+                        <td><textarea class="form-control" th:field="*{description}" id="description" rows="8" maxlength="400"
                                       name="description"
                                       placeholder="Не больше 400 символов" required></textarea></td>
                     </tr>
                     <tr>
-                        <td>Тип :</td>
+                        <td><label for="type.id">Тип :</label></td>
                         <td> <select class="form-control" id="type.id"  name="type.id" required>
                             <option th:each="type: ${types}"
                                     th:text="${type.name}"
@@ -35,12 +37,26 @@
                         </select></td>
                     </tr>
                     <tr>
-                        <td>Правила :</td>
+                        <td><label for="rIds">Правила :</label></td>
                         <td> <select class="form-control" id="rIds" name="rIds" multiple required>
                             <option th:each="rule: ${rules}"
                                     th:text="${rule.name}"
                                     th:value="${rule.id}"></option>
                         </select></td>
+                    </tr>
+                    <tr>
+                        <td><label for="dateTime">Дата и время :</label></td>
+                        <td><input class="form-control" type="datetime-local" th:field="*{accidentDateTime}" name="dateTime" id="dateTime" required/></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img th:src="@{/files/{fileId}(fileId=*{fileId})}" class="w-100" alt="No image">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file" required>
+                        </td>
                     </tr>
                     <tr>
                         <td><input type="submit" class="btn btn-secondary" value="Сохранить"/>
