--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:insert="fragment/head :: head"></head>
 <body th:with="httpStatus=${T(org.springframework.http.HttpStatus).valueOf(#response.status)}">
-<div th:insert="fragment/navbefore :: navbefore"></div>
+<div th:insert="fragment/navlogin :: navlogin"></div>
 <div class="container mt-3">
     <div class="card" style="width: 100%">
         <div class="card-header">
