--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -18,12 +18,12 @@
                 </div>
                 <form th:action="@{/login}" method="POST">
                     <div class="form-group">
-                        <label>Адрес электронной почты</label>
-                        <input type="text" class="form-control" name="username">
+                        <label for="username">Имя пользователя</label>
+                        <input type="text" class="form-control" name="username" id="username">
                     </div>
                     <div class="form-group">
-                        <label>Пароль</label>
-                        <input type="password" class="form-control" name="password">
+                        <label for="password">Пароль</label>
+                        <input type="password" class="form-control" name="password" id="password">
                     </div>
                     <button type="submit" class="btn btn-secondary">Продолжить</button>
                 </form>
