--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -15,12 +15,12 @@
                 </div>
                 <form th:action="@{/registration}" method="POST" th:object="${user}">
                     <div class="form-group">
-                        <label>Ваше имя</label>
-                        <input type="text" class="form-control" name="username" th:field="*{username}" required>
+                        <label for="username">Имя пользователя</label>
+                        <input type="text" class="form-control" name="username" th:field="*{username}" id="username" required>
                     </div>
                     <div class="form-group">
-                        <label>Пароль</label>
-                        <input type="password" class="form-control" name="password" th:field="*{password}" required>
+                        <label for="password">Пароль</label>
+                        <input type="password" class="form-control" name="password" th:field="*{password}" id="password" required>
                     </div>
                     <button type="submit" class="btn btn-secondary">Продолжить</button>
                 </form>
